--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.1.3
+  flutter_credit_card: ^3.0.3
 
 dev_dependencies:
   flutter_test:
@@ -81,11 +82,10 @@ flutter:
         - asset: assets/font/jaapokkiRegular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+#    - family: Muli
+#      fonts:
+#        - asset: fonts/muli/Muli.ttf
+#        - asset: fonts/muli.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
