--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   flutter_svg: ^1.1.3
   flutter_credit_card: ^3.0.3
   google_fonts: ^3.0.1
+  firebase_auth: ^3.6.4
+  cloud_firestore: ^3.4.5
+
 
 dev_dependencies:
   flutter_test:
